--- a/playbooks/app_policy_queuing_profile.yml
+++ b/playbooks/app_policy_queuing_profile.yml
@@ -7,13 +7,13 @@
   tasks:
     - name: Create
       cisco.catalystcenter.app_policy_queuing_profile:
-        _host: "{{ host }}"
-        _username: "{{ username }}"
-        _password: "{{ password }}"
-        _verify: "{{ verify }}"
-        _api_port: "{{ api_port }}"
-        _version: "{{ version }}"
-        _debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         state: present
         id: "a"
         payload:
