--- a/playbooks/authentication_import.yml
+++ b/playbooks/authentication_import.yml
@@ -7,11 +7,11 @@
   tasks:
     - name: Import certificate file
       cisco.catalystcenter.authentication_import_certificate:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         certFilePath: ./files/test.template
         pkFilePath: ./files/test.template
       register: result
