--- a/playbooks/device_credential_intent.yml
+++ b/playbooks/device_credential_intent.yml
@@ -12,12 +12,12 @@
       #
 
       cisco.catalystcenter.device_credential_intent:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         state: merged
         config:
@@ -93,12 +93,12 @@
                 - Global/Chennai/Tidel
     - name: Delete Credentials
       cisco.catalystcenter.device_credential_intent:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         state: deleted
         config:
