--- a/playbooks/device_credential_workflow_manager.yml
+++ b/playbooks/device_credential_workflow_manager.yml
@@ -8,12 +8,12 @@
   tasks:
     - name: Create global device credentials.
       cisco.catalystcenter.device_credential_workflow_manager:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         state: merged
         config_verify: true
@@ -59,12 +59,12 @@
                   # old_username:
     - name: Assign global device credentials to a site.
       cisco.catalystcenter.device_credential_workflow_manager:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         state: merged
         config_verify: true
@@ -90,12 +90,12 @@
                 - Global/Chennai/Tidel
     - name: Delete credentials
       cisco.catalystcenter.device_credential_workflow_manager:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         state: deleted
         config_verify: true
