--- a/playbooks/global_credentials_info.yml
+++ b/playbooks/global_credentials_info.yml
@@ -7,13 +7,13 @@
   tasks:
     - name: Get all Global Credential by SubType
       cisco.catalystcenter.global_credential_info:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         credentialSubType: HTTP_READ
         # sortBy:
         # order:
@@ -23,13 +23,13 @@
         msg: "{{ global_credentials_result }}"
     - name: Get Global Credential by id
       cisco.catalystcenter.global_credential_info:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         id: babc42b9-0bdd-49ef-912e-66f533fb5d59
         credentialSubType: HTTP_READ
       register: global_credential_result
