--- a/playbooks/network_device_custom_prompt_info.yml
+++ b/playbooks/network_device_custom_prompt_info.yml
@@ -7,13 +7,13 @@
   tasks:
     - name: Get all Network Device Custom Prompt
       cisco.catalystcenter.network_device_custom_prompt_info_info:
-        _host: "{{ host }}"
-        _username: "{{ username }}"
-        _password: "{{ password }}"
-        _verify: "{{ verify }}"
-        _api_port: "{{ api_port }}"
-        _version: "{{ version }}"
-        _debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
       register: network_device_custom_prompt_result
     - name: Show all network_device_custom_prompt
       ansible.builtin.debug:
