--- a/playbooks/sda_virtual_network_v2.yml
+++ b/playbooks/sda_virtual_network_v2.yml
@@ -7,13 +7,13 @@
   tasks:
     - name: Create
       cisco.catalystcenter.sda_virtual_network_v2:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         state: present
         isGuestVirtualNetwork: false
         scalableGroupNames:
@@ -23,12 +23,12 @@
 
 # - name: Delete all
 #   cisco.catalystcenter.sda_virtual_network_v2:
-#     host: "{{ host }}"
-#     username: "{{ username }}"
-#     password: "{{ password }}"
-#     verify: "{{ verify }}"
-#     api_port: "{{ api_port }}"
-#     version: "{{ version }}"
-#     debug: "{{ debug }}"
+#     _host: "{{ _host }}"
+#     _username: "{{ _username }}"
+#     _password: "{{ _password }}"
+#     _verify: "{{ _verify }}"
+#     _api_port: "{{ _api_port }}"
+#     _version: "{{ _version }}"
+#     _debug: "{{ _debug }}"
 #     state: absent
 #     virtualNetworkName: GUEST_VN
