--- a/playbooks/command_runner_run_command.yml
+++ b/playbooks/command_runner_run_command.yml
@@ -7,10 +7,10 @@
   tasks:
     - name: Run command
       cisco.catalystcenter.command_runner_run_command:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
         commands:
           - pwd
         deviceUuids:
@@ -21,10 +21,10 @@
         msg: "{{ result }}"
     - name: Get task info
       cisco.catalystcenter.task_info:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
         taskId: "{{ result.catalystcenter_response.response.taskId }}"
       when:
         - result.catalystcenter_response is defined
