--- a/playbooks/configs_backup.yml
+++ b/playbooks/configs_backup.yml
@@ -7,13 +7,13 @@
     - "{{ CLUSTERFILE }}"
   vars:
     catalystcenter_login: &catalystcenter_login
-      host: "{{ host }}"
-      username: "{{ username }}"
-      password: "{{ password }}"
-      verify: "{{ verify }}"
-      api_port: "{{ api_port }}"
-      version: "{{ version }}"
-      debug: "{{ debug }}"
+      _host: "{{ _host }}"
+      _username: "{{ _username }}"
+      _password: "{{ _password }}"
+      _verify: "{{ _verify }}"
+      _api_port: "{{ _api_port }}"
+      _version: "{{ _version }}"
+      _debug: "{{ _debug }}"
       log_level: "DEBUG"
   tasks:
     - name: Take backup of a wired 9500 switch
