--- a/playbooks/download_device_cmd_runner_output.yml
+++ b/playbooks/download_device_cmd_runner_output.yml
@@ -5,13 +5,13 @@
     - credentials.yml
   vars:
     catalystcenter_login: &catalystcenter_login
-      host: "{{ host }}"
-      username: "{{ username }}"
-      password: "{{ password }}"
-      verify: "{{ verify }}"
-      api_port: "{{ api_port }}"
-      version: "{{ version }}"
-      debug: "{{ debug }}"
+      _host: "{{ _host }}"
+      _username: "{{ _username }}"
+      _password: "{{ _password }}"
+      _verify: "{{ _verify }}"
+      _api_port: "{{ _api_port }}"
+      _version: "{{ _version }}"
+      _debug: "{{ _debug }}"
   gather_facts: false
   tasks:
     - name: Get Network Devices - Switches and Hubs
