--- a/playbooks/event_webhook_create.yml
+++ b/playbooks/event_webhook_create.yml
@@ -11,7 +11,7 @@
         _username: "{{ _username }}"
         _password: "{{ _password }}"
         _verify: "{{ _verify }}"
-        dnac_debug: true
+        _debug: true
         description: "webhok description for iac2.0"
         headers:
           - defaultValue: string
