--- a/playbooks/events_and_notifications_workflow_manager.yml
+++ b/playbooks/events_and_notifications_workflow_manager.yml
@@ -9,13 +9,13 @@
   tasks:
     - name: Add/update channels with destination and create/update events in Cisco Catalyst Center.
       cisco.catalystcenter.events_and_notifications_workflow_manager:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         log_level: DEBUG
         log: true
         config_verify: true
