--- a/playbooks/global_credentials.yml
+++ b/playbooks/global_credentials.yml
@@ -7,26 +7,26 @@
   tasks:
     - name: Create CLI Credential
       cisco.catalystcenter.cli_credential:
-        host: "{{ host }}"
-        username: Test2
-        password: C2sco456!2
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: Test2
+        _password: C2sco456!2
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         state: present
         validate_response_schema: false
         enablePassword: C2sco456!
         description: Test2 Ansible
     - name: Create SNMPV3 Credential
       cisco.catalystcenter.snmpv3_credential:
-        host: "{{ host }}"
-        username: user2
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: user2
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         state: present
         validate_response_schema: false
         snmpMode: NOAUTHNOPRIV
