--- a/playbooks/global_pool.yml
+++ b/playbooks/global_pool.yml
@@ -7,12 +7,12 @@
   tasks:
     - name: Find discovery
       cisco.catalystcenter.global_pool:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         state: present
         # id: 1bf5ecf3-be14-48fb-b724-df801bc61172
         settings:
