--- a/playbooks/import_image_file.yml
+++ b/playbooks/import_image_file.yml
@@ -7,10 +7,10 @@
   tasks:
     - name: Import image file
       cisco.catalystcenter.swim_import_local:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
         filePath: fullpath/playbooks/files/test.template  # string
         isThirdParty: true  # boolean
         thirdPartyApplicationType: SomeValue  # string
