--- a/playbooks/inventory_device.yml
+++ b/playbooks/inventory_device.yml
@@ -9,13 +9,13 @@
   tasks:
     - name: Add/Update/Resync/Delete the devices in Cisco CATALYST Center Inventory.
       cisco.catalystcenter.inventory_intent:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         log: true
         state: merged
         config:
