--- a/playbooks/network_settings_intent.yml
+++ b/playbooks/network_settings_intent.yml
@@ -12,12 +12,12 @@
       #
 
       cisco.catalystcenter.network_settings_intent:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         log_level: "{{ log_level }}"
         log_append: true
@@ -93,12 +93,12 @@
               site_name: Global/Chennai
     - name: Delete Global Pool and Release Pool Reservation
       cisco.catalystcenter.network_settings_intent:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         log_level: "{{ log_level }}"
         state: deleted
