--- a/playbooks/reports_executions_info.yml
+++ b/playbooks/reports_executions_info.yml
@@ -7,11 +7,11 @@
   tasks:
     - name: Download report content
       cisco.catalystcenter.reports_executions_info:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         reportId: be9d6d76-0bff-4c49-84a1-16adf58431c6
         executionId: 586da15e-5f50-4f65-8f3d-303f88dfdf18
         dirPath: /Users/wilhelm32/Downloads/dna
