--- a/playbooks/reserve_ip_subpool.yml
+++ b/playbooks/reserve_ip_subpool.yml
@@ -9,13 +9,13 @@
   tasks:
     - name: Create reservation
       cisco.catalystcenter.reserve_ip_subpool:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         state: present
         ipv4DhcpServers:
           - 55.66.55.55
@@ -32,13 +32,13 @@
         type: LAN
     - name: Get Reservations
       cisco.catalystcenter.reserve_ip_subpool_info:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         siteId: "{{ site }}"
       register: ip_pool
     - name: Print Reservations
