--- a/playbooks/sda_fabric_site.yml
+++ b/playbooks/sda_fabric_site.yml
@@ -7,26 +7,26 @@
   tasks:
     - name: Create
       cisco.catalystcenter.sda_fabric_site:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         state: present
         fabricName: CATALYST_Guide_Fabric
         siteNameHierarchy: Global/San Francisco
 
 # - name: Delete all
 #   cisco.catalystcenter.sda_fabric_site:
-#     host: "{{ host }}"
-#     username: "{{ username }}"
-#     password: "{{ password }}"
-#     verify: "{{ verify }}"
-#     api_port: "{{ api_port }}"
-#     version: "{{ version }}"
-#     debug: "{{ debug }}"
+#     _host: "{{ _host }}"
+#     _username: "{{ _username }}"
+#     _password: "{{ _password }}"
+#     _verify: "{{ _verify }}"
+#     _api_port: "{{ _api_port }}"
+#     _version: "{{ _version }}"
+#     _debug: "{{ _debug }}"
 #     state: absent
 #     siteNameHierarchy: Global/San Francisco
 #   register: result
