--- a/playbooks/site_intent.yml
+++ b/playbooks/site_intent.yml
@@ -8,13 +8,13 @@
   tasks:
     - name: Get site info and updating site details
       cisco.catalystcenter.site_intent:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         log: true
         state: merged
         config:
