--- a/playbooks/template_workflow_manager.yml
+++ b/playbooks/template_workflow_manager.yml
@@ -9,12 +9,12 @@
   tasks:
     - name: Test project template
       cisco.catalystcenter.template_workflow_manager:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         log_level: DEBUG
         log_append: true
