--- a/playbooks/test_swim_module.yml
+++ b/playbooks/test_swim_module.yml
@@ -9,12 +9,12 @@
   tasks:
     - name: Import an image, tag it as golden and load it on device
       cisco.catalystcenter.swim_intent:
-        host: "{{ host }}"
-        api_port: "{{ api_port }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _api_port: "{{ _api_port }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _debug: "{{ _debug }}"
         log: true
         config:
           - import_image_details:
