--- a/playbooks/user_info.yml
+++ b/playbooks/user_info.yml
@@ -8,13 +8,13 @@
   tasks:
     - name: Get all User
       cisco.catalystcenter.user_info:
-        host: "{{ host }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
-        verify: "{{ verify }}"
-        api_port: "{{ api_port }}"
-        version: "{{ version }}"
-        debug: "{{ debug }}"
+        _host: "{{ _host }}"
+        _username: "{{ _username }}"
+        _password: "{{ _password }}"
+        _verify: "{{ _verify }}"
+        _api_port: "{{ _api_port }}"
+        _version: "{{ _version }}"
+        _debug: "{{ _debug }}"
         # headers: "{{ my_headers | from_json }}"
         invokeSource: string
       register: result
