Refactor user role workflow manager and wireless design workflow manager to use 'catc_' prefix for parameters
- Updated parameters in user_role_workflow_manager.py to replace 'dnac_' with 'catc_' prefix for consistency.
- Modified wireless_design_workflow_manager.py to change 'configverify' to 'config_verify' and updated logging parameters to 'catc_log' and 'catc_log_level'.
- Adjusted argument specifications in catalystcenter.py to reflect the new 'catc_' prefix for host, username, password, and other parameters.
- Updated integration tests across various modules to use 'catc_log' and 'catc_log_level' instead of 'log' and 'log_level'.

--- a/playbooks/configs_backup.yml
+++ b/playbooks/configs_backup.yml
@@ -14,12 +14,12 @@
       catc_api_port: "{{ catc_api_port }}"
       catc_version: "{{ catc_version }}"
       catc_debug: "{{ catc_debug }}"
-      log_level: "DEBUG"
+      catc_log_level: "DEBUG"
   tasks:
     - name: Take backup of a wired 9500 switch
       cisco.catalystcenter.device_configs_backup_workflow_manager:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: merged
         configverify: true
         config:
@@ -28,7 +28,7 @@
     - name: Take backup of all the switches
       cisco.catalystcenter.device_configs_backup_workflow_manager:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: merged
         configverify: true
         config:
