--- a/playbooks/credentials.template
+++ b/playbooks/credentials.template
@@ -6,6 +6,6 @@ catc_password: <password>
 catc_version: 2.3.7.6
 catc_verify: False
 catc_debug: False
-log_level: [CRITICAL, ERROR, WARNING, INFO, DEBUG]
-log_file_path: <file_path>
-log_append: True
+catc_log_level: [CRITICAL, ERROR, WARNING, INFO, DEBUG]
+catc_log_file_path: <file_path>
+catc_log_append: True
