--- a/playbooks/device_credential_intent.yml
+++ b/playbooks/device_credential_intent.yml
@@ -18,7 +18,7 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
+        catc_log: true
         state: merged
         config:
           - global_credential_details:
@@ -99,7 +99,7 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
+        catc_log: true
         state: deleted
         config:
           - global_credential_details:
