--- a/playbooks/device_credential_workflow_manager.yml
+++ b/playbooks/device_credential_workflow_manager.yml
@@ -14,7 +14,7 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
+        catc_log: true
         state: merged
         configverify: true
         config:
@@ -65,7 +65,7 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
+        catc_log: true
         state: merged
         configverify: true
         config:
@@ -96,7 +96,7 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
+        catc_log: true
         state: deleted
         configverify: true
         config:
