--- a/playbooks/PnP.yml
+++ b/playbooks/PnP.yml
@@ -14,12 +14,12 @@
       catc_api_port: "{{ catc_api_port }}"
       catc_version: "{{ catc_version }}"
       catc_debug: "{{ catc_debug }}"
-      log_level: DEBUG
+      catc_log_level: DEBUG
   tasks:
     - name: Import devices in bulk
       cisco.catalystcenter.pnp_intent:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: merged
         configverify: true
         config:
@@ -38,7 +38,7 @@
     - name: Add a new device and claim it
       cisco.catalystcenter.pnp_intent:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
@@ -51,7 +51,7 @@
     - name: Claim a pre-added switch, apply a template, and perform an image upgrade for a specific site
       cisco.catalystcenter.pnp_intent:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
@@ -69,7 +69,7 @@
     - name: Claim an existing Wireless Controller, apply a template, and upgrade its image for a specified site
       cisco.catalystcenter.pnp_intent:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
@@ -91,7 +91,7 @@
     - name: Remove multiple devices from the PnP dashboard safely (ignores non-existent devices)
       cisco.catalystcenter.pnp_intent:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: deleted
         configverify: true
         config:
