--- a/playbooks/device_provision_workflow.yml
+++ b/playbooks/device_provision_workflow.yml
@@ -14,12 +14,12 @@
       catc_api_port: "{{ catc_api_port }}"
       catc_version: "{{ catc_version }}"
       catc_debug: "{{ catc_debug }}"
-      log_level: "{{ log_level }}"
+      catc_log_level: "{{ catc_log_level }}"
   tasks:
     - name: Assign a wired device to a site
       cisco.catalystcenter.provision_workflow_manager:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: merged
         configverify: true
         config:
@@ -29,8 +29,8 @@
     - name: Provision a wired device to a site
       cisco.catalystcenter.provision_workflow_manager:
         !!merge <<: *catalystcenter_login
-        log: true
-        log_level: DEBUG
+        catc_log: true
+        catc_log_level: DEBUG
         state: merged
         configverify: true
         config:
@@ -39,15 +39,15 @@
     - name: Unprovision a wired device from a site
       cisco.catalystcenter.provision_workflow_manager:
         !!merge <<: *catalystcenter_login
-        log: true
+        catc_log: true
         state: deleted
         config:
           - management_ip_address: 204.1.2.2
     - name: Provision a wireless device to a site
       cisco.catalystcenter.provision_workflow_manager:
         !!merge <<: *catalystcenter_login
-        log: true
-        log_level: DEBUG
+        catc_log: true
+        catc_log_level: DEBUG
         state: merged
         configverify: true
         config:
