--- a/playbooks/ise_radius_integration_workflow_manager.yml
+++ b/playbooks/ise_radius_integration_workflow_manager.yml
@@ -14,10 +14,10 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: "{{ log_level }}"
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: "{{ catc_log_level }}"
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -42,10 +42,10 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: "{{ log_level }}"
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: "{{ catc_log_level }}"
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
         configverify: true
         config:
@@ -59,10 +59,10 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: "{{ log_level }}"
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: "{{ catc_log_level }}"
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -97,10 +97,10 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: "{{ log_level }}"
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: "{{ catc_log_level }}"
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
         configverify: true
         config:
