--- a/playbooks/network_settings_workflow_manager.yml
+++ b/playbooks/network_settings_workflow_manager.yml
@@ -14,10 +14,10 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -105,8 +105,8 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: "{{ log_level }}"
+        catc_log: true
+        catc_log_level: "{{ catc_log_level }}"
         state: deleted
         configverify: true
         config:
