--- a/playbooks/provision_workflow_manager.yml
+++ b/playbooks/provision_workflow_manager.yml
@@ -15,11 +15,11 @@
         catc_api_port: "{{ catc_api_port }}"
         catc_version: "{{ catc_version }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: DEBUG
+        catc_log: true
+        catc_log_level: DEBUG
         configverify: true
-        catalystcenter_api_task_timeout: 1000
-        catalystcenter_task_poll_interval: 1
+        catc_api_task_timeout: 1000
+        catc_task_poll_interval: 1
         state: merged
         config:
           - site_name_hierarchy: Global/Chennai/LTTS/FLOOR1
