--- a/playbooks/rma_workflow_manager.yml
+++ b/playbooks/rma_workflow_manager.yml
@@ -15,8 +15,8 @@
         catc_api_port: "{{ catc_api_port }}"
         catc_version: "{{ catc_version }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: DEBUG
+        catc_log: true
+        catc_log_level: DEBUG
         configverify: true
         resync_retry_count: 1000
         resync_retry_interval: 30
