--- a/playbooks/sda_extranet_policies_workflow_manager.yml
+++ b/playbooks/sda_extranet_policies_workflow_manager.yml
@@ -13,9 +13,9 @@
       catc_api_port: "{{ catc_api_port }}"
       catc_version: "{{ catc_version }}"
       catc_debug: "{{ catc_debug }}"
-      log: true
-      log_level: INFO
-      log_append: false
+      catc_log: true
+      catc_log_level: INFO
+      catc_log_append: false
       configverify: true
   tasks:
     - name: Create Extranet Policy
