--- a/playbooks/sda_fabric_devices_workflow_manager.yml
+++ b/playbooks/sda_fabric_devices_workflow_manager.yml
@@ -15,10 +15,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -60,10 +60,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
         configverify: true
         config:
@@ -90,10 +90,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
         configverify: true
         config:
