--- a/playbooks/sda_fabric_transits_workflow_manager.yml
+++ b/playbooks/sda_fabric_transits_workflow_manager.yml
@@ -15,10 +15,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -37,10 +37,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -60,10 +60,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -86,10 +86,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -109,10 +109,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
         catc_version: "{{ catc_version }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
@@ -135,10 +135,10 @@
         catc_verify: "{{ catc_verify }}"
         catc_version: "{{ catc_version }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
         configverify: true
         config:
