--- a/playbooks/template_workflow_manager.yml
+++ b/playbooks/template_workflow_manager.yml
@@ -15,10 +15,10 @@
         catc_password: "{{ catc_password }}"
         catc_verify: "{{ catc_verify }}"
         catc_debug: "{{ catc_debug }}"
-        log: true
-        log_level: DEBUG
-        log_append: true
-        log_file_path: "{{ log_file_path }}"
+        catc_log: true
+        catc_log_level: DEBUG
+        catc_log_append: true
+        catc_log_file_path: "{{ catc_log_file_path }}"
         validate_response_schema: false
         state: "merged"
         configverify: true
