--- a/tests/integration/ccc_swim_management/tests/test_swim_management.yml
+++ b/tests/integration/ccc_swim_management/tests/test_swim_management.yml
@@ -16,8 +16,8 @@
         api_port: "{{ api_port }}"
         version: "{{ version }}"
         debug: "{{ debug }}"
-        log: true
-        log_level: DEBUG
+        catc_log: true
+        catc_log_level: DEBUG
 
   # - debug:
   #     msg: "{{ vars_map. }}"
