--- a/tests/integration/ccc_user_role_workflow_manager/tests/test_user_role_workflow_manager.yml
+++ b/tests/integration/ccc_user_role_workflow_manager/tests/test_user_role_workflow_manager.yml
@@ -16,8 +16,8 @@
         api_port: "{{ api_port }}"
         version: "{{ version }}"
         debug: "{{ debug }}"
-        log: true
-        log_level: DEBUG
+        catc_log: true
+        catc_log_level: DEBUG
 
   # - debug:
   #     msg: "{{ vars_map. }}"
